--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -99,14 +99,14 @@ body
     box-sizing: border-box;
     background-color: #000000;
   }
-  .slider{
+  .slider1{
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.8s ease-in-out;
 }
-.slide{
+.slide1{
     min-width: 100%;
 }
-.slide img{
+.slide1 img{
     width: 100%;
     border-radius: 10px;
     height: 600px;
@@ -161,6 +161,72 @@ body
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
+}
+.wrap{
+  max-width: 1140px;
+  margin: 0 auto;
+  border-radius: 10px;
+  padding: 10px 20px;
+  color: #fff;
+}
+.slider-contai {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.slider-contai i{
+  color: #ffffff;
+  font-weight: bolder;
+}
+.slide {
+  display: flex;
+  transition: transform 0.5s ease;
+  gap: 20px;
+}
+.card {
+  border-radius: 10px;
+  text-align: center;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.card img {
+  height: 300px;
+  display: block;
+}
+.card p {
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #272727;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 1;
+  font-size: 24px;
+}
+
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+}
+.wrap h3{
+  font-weight: bolder;
+  font-size: 2.5rem;
+  margin-top: 50px;
+}
+.card:hover{
+  transform: scale(1.1);
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+  transition: 0.3s ease;
 }
   footer {
     font-family: var(--font1);
@@ -256,4 +322,7 @@ body
   }
   .footer-section2 .contact p {
     margin-left: 10px;
+  }
+  button:hover{
+    background-color: blueviolet;
   }
